--- a/app/src/main/res/layout/native_oes_render_test.xml
+++ b/app/src/main/res/layout/native_oes_render_test.xml
@@ -83,4 +83,11 @@
             android:layout_height="match_parent"/>
     </LinearLayout>
 
+    <CheckBox
+        android:id="@+id/cb_denoise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开启卷积降噪"
+        android:checked="true"/>
+
 </LinearLayout>
