1、背景消除渲染器实现了草稿 2、实现了用户自定义图层缩放接口

--- a/app/src/main/res/layout/native_oes_render_test.xml
+++ b/app/src/main/res/layout/native_oes_render_test.xml
@@ -83,6 +83,43 @@
             android:layout_height="match_parent"/>
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="缩放："/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="x轴缩放"/>
+
+        <SeekBar
+            android:id="@+id/seekBar_scale_x"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="y轴缩放"/>
+
+        <SeekBar
+            android:id="@+id/seekBar_scale_y"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
     <CheckBox
         android:id="@+id/cb_denoise"
         android:layout_width="wrap_content"
