--- a/app/src/main/res/layout/native_oes_render_test.xml
+++ b/app/src/main/res/layout/native_oes_render_test.xml
@@ -1,130 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <com.opengldecoder.jnibridge.NativeGLSurfaceView
-        android:id="@+id/ngls"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="亮度调节"/>
-
-    <SeekBar
-        android:id="@+id/seekBar_brightness"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="对比度调节"/>
-
-    <SeekBar
-        android:id="@+id/seekBar_contrast"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="白平衡"/>
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <com.opengldecoder.jnibridge.NativeGLSurfaceView
+            android:id="@+id/ngls"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="红"/>
+            android:text="亮度调节"/>
 
         <SeekBar
-            android:id="@+id/seekBar_channel_red"
+            android:id="@+id/seekBar_brightness"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            android:layout_height="wrap_content"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="绿"/>
+            android:text="对比度调节"/>
 
         <SeekBar
-            android:id="@+id/seekBar_channel_green"
+            android:id="@+id/seekBar_contrast"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            android:layout_height="wrap_content"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="蓝"/>
-
-        <SeekBar
-            android:id="@+id/seekBar_channel_blue"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:text="白平衡"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="缩放："/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="红"/>
+
+            <SeekBar
+                android:id="@+id/seekBar_channel_red"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="绿"/>
+
+            <SeekBar
+                android:id="@+id/seekBar_channel_green"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="蓝"/>
+
+            <SeekBar
+                android:id="@+id/seekBar_channel_blue"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="缩放："/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="x轴缩放"/>
+
+            <SeekBar
+                android:id="@+id/seekBar_scale_x"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="y轴缩放"/>
+
+            <SeekBar
+                android:id="@+id/seekBar_scale_y"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="旋转："/>
+
+            <SeekBar
+                android:id="@+id/seekBar_rotate"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/cb_denoise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="x轴缩放"/>
+            android:text="开启卷积降噪"
+            android:checked="true"/>
 
-        <SeekBar
-            android:id="@+id/seekBar_scale_x"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="y轴缩放"/>
-
-        <SeekBar
-            android:id="@+id/seekBar_scale_y"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
-
-    <CheckBox
-        android:id="@+id/cb_denoise"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="开启卷积降噪"
-        android:checked="true"/>
-
-</LinearLayout>
+</ScrollView>
