--- a/app/src/main/res/layout/native_oes_render_test.xml
+++ b/app/src/main/res/layout/native_oes_render_test.xml
@@ -176,5 +176,15 @@
             android:layout_height="400dp">
 
         </ListView>
+
+<!--开启动态模糊背景-->
+        <CheckBox
+            android:id="@+id/cb_blur_bg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="开启动态模糊背景"
+            android:checked="false"/>
+
+
     </LinearLayout>
 </ScrollView>
