--- a/app/src/main/res/layout/shader_effect_choice.xml
+++ b/app/src/main/res/layout/shader_effect_choice.xml
@@ -22,5 +22,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="光斑测试"/>
+
+        <Button
+            android:id="@+id/btn_sea_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="海洋纹理测试"/>
     </LinearLayout>
 </FrameLayout>
