--- a/app/src/main/res/layout/activity_draw_lines.xml
+++ b/app/src/main/res/layout/activity_draw_lines.xml
@@ -2,11 +2,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/white">
 
     <FrameLayout
         android:id="@+id/draw_lines_canvas_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <RadioGroup
+        android:id="@+id/draw_lines_style_choice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <RadioButton
+            android:id="@+id/draw_lines_style_normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="普通模式"
+            android:checked="true"/>
+
+        <RadioButton
+            android:id="@+id/draw_lines_style_pen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="加速度笔锋模式"
+            android:checked="false"/>
+
+        <RadioButton
+            android:id="@+id/draw_lines_style_pen_of_device"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="手写笔笔锋模式（需要设备支持）"
+            android:checked="false"/>
+    </RadioGroup>
 
 </RelativeLayout>
